@@ -24,6 +24,8 @@ enum cgdb_input_macro {
     CGDB_KEY_F10,
     CGDB_KEY_F11,
     CGDB_KEY_F12,
+
+    /* Alt Letters */
     CGDB_KEY_ALT_A,
     CGDB_KEY_ALT_B,
     CGDB_KEY_ALT_C,
@@ -50,6 +52,85 @@ enum cgdb_input_macro {
     CGDB_KEY_ALT_X,
     CGDB_KEY_ALT_Y,
     CGDB_KEY_ALT_Z,
+
+    /* Alt Shifted Letters */
+    CGDB_KEY_ALT_SHIFT_A,
+    CGDB_KEY_ALT_SHIFT_B,
+    CGDB_KEY_ALT_SHIFT_C,
+    CGDB_KEY_ALT_SHIFT_D,
+    CGDB_KEY_ALT_SHIFT_E,
+    CGDB_KEY_ALT_SHIFT_F,
+    CGDB_KEY_ALT_SHIFT_G,
+    CGDB_KEY_ALT_SHIFT_H,
+    CGDB_KEY_ALT_SHIFT_I,
+    CGDB_KEY_ALT_SHIFT_J,
+    CGDB_KEY_ALT_SHIFT_K,
+    CGDB_KEY_ALT_SHIFT_L,
+    CGDB_KEY_ALT_SHIFT_M,
+    CGDB_KEY_ALT_SHIFT_N,
+    CGDB_KEY_ALT_SHIFT_O,
+    CGDB_KEY_ALT_SHIFT_P,
+    CGDB_KEY_ALT_SHIFT_Q,
+    CGDB_KEY_ALT_SHIFT_R,
+    CGDB_KEY_ALT_SHIFT_S,
+    CGDB_KEY_ALT_SHIFT_T,
+    CGDB_KEY_ALT_SHIFT_U,
+    CGDB_KEY_ALT_SHIFT_V,
+    CGDB_KEY_ALT_SHIFT_W,
+    CGDB_KEY_ALT_SHIFT_X,
+    CGDB_KEY_ALT_SHIFT_Y,
+    CGDB_KEY_ALT_SHIFT_Z,
+
+    /* Alt Numbers */
+    CGDB_KEY_ALT_1,
+    CGDB_KEY_ALT_2,
+    CGDB_KEY_ALT_3,
+    CGDB_KEY_ALT_4,
+    CGDB_KEY_ALT_5,
+    CGDB_KEY_ALT_6,
+    CGDB_KEY_ALT_7,
+    CGDB_KEY_ALT_8,
+    CGDB_KEY_ALT_9,
+    CGDB_KEY_ALT_0,
+
+    /* Alt Shifted Numbers */
+    CGDB_KEY_ALT_SHIFT_1,
+    CGDB_KEY_ALT_SHIFT_2,
+    CGDB_KEY_ALT_SHIFT_3,
+    CGDB_KEY_ALT_SHIFT_4,
+    CGDB_KEY_ALT_SHIFT_5,
+    CGDB_KEY_ALT_SHIFT_6,
+    CGDB_KEY_ALT_SHIFT_7,
+    CGDB_KEY_ALT_SHIFT_8,
+    CGDB_KEY_ALT_SHIFT_9,
+    CGDB_KEY_ALT_SHIFT_0,
+
+    /* Alt Special */
+    CGDB_KEY_ALT_MINUS,
+    CGDB_KEY_ALT_EQUAL,
+    CGDB_KEY_ALT_LEFT_BRACKET,
+    CGDB_KEY_ALT_RIGHT_BRACKET,
+    CGDB_KEY_ALT_BACKSLASH,
+    CGDB_KEY_ALT_SEMICOLON,
+    CGDB_KEY_ALT_APOSTROPHE,
+    CGDB_KEY_ALT_COMMA,
+    CGDB_KEY_ALT_PERIOD,
+    CGDB_KEY_ALT_DIVIDE,
+    CGDB_KEY_ALT_ACCENT_MARK,
+
+    /* Alt Shift Special */
+    CGDB_KEY_ALT_SHIFT_UNDERSCORE,
+    CGDB_KEY_ALT_SHIFT_PLUS,
+    CGDB_KEY_ALT_SHIFT_LEFT_CURLY_BRACKET,
+    CGDB_KEY_ALT_SHIFT_RIGHT_CURLY_BRACKET,
+    CGDB_KEY_ALT_SHIFT_PIPE,
+    CGDB_KEY_ALT_SHIFT_COLON,
+    CGDB_KEY_ALT_SHIFT_QUOTE,
+    CGDB_KEY_ALT_SHIFT_LESS_THAN,
+    CGDB_KEY_ALT_SHIFT_GREATER_THAN,
+    CGDB_KEY_ALT_SHIFT_QUESTION_MARK,
+    CGDB_KEY_ALT_SHIFT_TILDA,
+     
     CGDB_KEY_ERROR
 };
 
