@@ -1,3 +1,7 @@
+03/27/2003 Bob Rossi <bob_rossi@cox.net>
+
+    * Adding an initial list of key alt and alt-shift key bindings
+
 03/26/2003 Bob Rossi <bob_rossi@cox.net>
 
     * Adding the Alt-A through Alt-Z key bindings
